[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/UI/Console.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Console" type="CanvasLayer"]
layer = 3
script = ExtResource( 2 )

[node name="Base" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 576.0
color = Color( 0.105882, 0.0509804, 0.133333, 0.313726 )

[node name="Grabber" type="Panel" parent="Base"]
modulate = Color( 1, 0.741176, 0.929412, 0.803922 )
margin_top = -16.0
margin_right = 752.0

[node name="ScrollContainer" type="ScrollContainer" parent="Base"]
margin_left = 16.0
margin_top = 8.0
margin_right = 744.0
margin_bottom = 472.0

[node name="History" type="Label" parent="Base/ScrollContainer"]
margin_right = 688.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "Hello, welcome to the Tenef Island console!
This game was created mostly by Spixbox,
thanks for playing! <3
"

[node name="Input" type="LineEdit" parent="Base"]
margin_left = 8.0
margin_top = 488.0
margin_right = 744.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 1 )
placeholder_text = "enter console command"

[connection signal="mouse_entered" from="Base/Grabber" to="." method="_on_mouse_grabber_hover"]
[connection signal="mouse_exited" from="Base/Grabber" to="." method="_on_mouse_grabber_unhover"]
[connection signal="text_changed" from="Base/Input" to="." method="_on_text_change"]
